--- a/www/index.html
+++ b/www/index.html
@@ -37,5 +37,6 @@
       have templates inline in this html file if you'd like).
     -->
     <ion-nav-view></ion-nav-view>
+    <ion-nav-view name="intro"></ion-nav-view>
   </body>
 </html>
